--- a/tests/resources/translations_de.properties
+++ b/tests/resources/translations_de.properties
@@ -1,15 +1,18 @@
-default.invalid.min.message=Die Eigenschaft [{0}] der Klasse [{1}] mit dem Wert [{2}] ist kleiner als der Mindestwert [{3}]
+default.invalid.min.message=Die Eigenschaft [{0}] der Klasse [{1}] mit Wert [{2}] ist kleiner als der Mindestwert [{3}]
 
 # Track 4 on Expert In A Dying Field
 TheBeths.YourSide.lyrics=Ich will dich an der Tür klopfen sehen. \
-    Ich möchte dich da draußen im Regenguss warten lassen. \
-    Singt, dass es dir leid tut, tropft auf den Boden des Flurs.
-instructor.submitWithCustomTime.customSubmitTS.missing.error=Der Parameter customSubmitTS fehlt. \
-    Er muss vorhanden sein und vom Typ Date sein.
+    Ich will dich draußen im Wolkenbruch warten lassen. \
+    Singend, dass es dir leid tut, tropfend auf den Flurboden.
+instructor.submitWithCustomTime.customSubmitTS.missing.error=Der customSubmitTS-Parameter fehlt. \
+    Es muss anwesend und vom Typ Datum sein.
 
 # SessionItem.itemID is the first parameter
-instructorService.removeSession.success={0} Sitzung wurde entfernt.
+instructorService.removeSession.success={0} Sitzung entfernt.
 
-handshake.register.suspended.error=Der Testzeitraum für Ihr Konto ist abgelaufen \
-    und Sie können die Anwendung nicht mehr verwenden.
-handshake.register.disabledException.error=Der Kursleiter ist deaktiviert
+handshake.register.suspended.error=Die Testphase für dein Konto ist beendet \
+    Und Sie können die Anwendung nicht mehr verwenden.
+handshake.register.disabledException.error=Der Ausbilder ist behindert
+associatedGroupMessageText=\
+    Für jede Sitzung in dieser Gruppe werden auch die auf dieser Seite vorgenommenen Anwesenheitsmaßnahmen vorgenommen.
+removedMultipleSessionsErrorsMessage=Fehler: {0}. \n\n Sitzungen erfolgreich entfernt: {1}
