--- a/tests/resources/translations2_pt.properties
+++ b/tests/resources/translations2_pt.properties
@@ -6,3 +6,7 @@ recordAttendance.segment.notFound.error=Segmentar com segmentID {0} \
     não encontrado nos segmentos do SessionItem
 
 me=primeiro!
+clientHelpText=Para problemas com o software, tablets e scanners de cartão \
+    apenas, entre em contato com Tina Herring em \n\
+    \n\
+    \ E-mail: tina.herring@yourcompany.com
